@@ -144,7 +144,15 @@ nn-nn-07 - Version 5.1.0 Alpha
 	  correctly named mutator/accessor, causing data source implementations that
 	  use JavaBean naming conventions to set properties to fail to set the property
 	  (and in the case of SJAS, fail silently when trying to set this parameter).
-	  	  
+	  
+	- Fixed BUG#25787 - java.util.Date should be serialized for 
+	  PreparedStatement.setObject(). 
+	  
+	  We've added a new configuration option "treatUtilDateAsTimestamp", which is 
+	  false by default, as (1) We already had specific behavior to treat 
+	  java.util.Date as a java.sql.Timestamp because it's useful to many folks, 
+	  and (2) that behavior will very likely be required for drivers JDBC-post-4.0.
+	  	  	  
 10-20-06 - Version 5.0.4
 
     - Fixed BUG#21379 - column names don't match metadata in cases 
